results/SVCOMP/4-shot/log-ExSymExe19-2024_03_18_18_43_44.txt
class Main {
  static int field;
  static int field2;

  //@ requires \symbolic(arg);
  //@ ensures \result ==> field < 0;
  //@ ensures \result ==> field == \old(field) % 10;
  //@ ensures \result ==> test(3, field, field2);
  public static boolean f(int arg) {
    int x = 3; /* we want to specify in an annotation that this param should be
                  symbolic */

    Main inst = new Main();
    field = arg;
    if (field < 0) return true;
    field = field % 10;
    return inst.test(x, field, field2);
  }

  //@ requires \symbolic(x);
  //@ requires \symbolic(z);
  //@ requires \symbolic(r);
  //@ ensures \result ==> x == z + r;
  //@ ensures \result ==> z == 3 * x;
  //@ ensures \result ==> r == -z;
  //@ ensures \result ==> (x > 99 ==> false) && (x <= 99 ==> (r > z ==> false) && (r <= z ==> true));
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe19");
    int y = 3;
    x = z + r;
    z = y * x;
    r = -z;
    if (x > 99) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (r > z) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:5: error: This backslash token is unknown: \symbolic
  //@ requires \symbolic(arg);
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:20: error: This backslash token is unknown: \symbolic
  //@ requires \symbolic(x);
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:21: error: This backslash token is unknown: \symbolic
  //@ requires \symbolic(z);
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExe19.java:22: error: This backslash token is unknown: \symbolic
  //@ requires \symbolic(r);
               ^
4 errors

